implemented darkmode and edited font style

--- a/app/src/main/res/drawable/around.xml
+++ b/app/src/main/res/drawable/around.xml
@@ -9,7 +9,7 @@
                 android:topRightRadius="7dp"
                 ></corners>
 
-            <solid android:color="#FFF" />
+            <solid android:color="@color/white_box" />
 
         </shape>
     </item>
