--- a/app/src/main/res/layout/activity_after_search.xml
+++ b/app/src/main/res/layout/activity_after_search.xml
@@ -4,7 +4,7 @@
     android:id="@+id/lay1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D7EBEA"
+    android:background="@color/aqua"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -12,7 +12,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="#D7EBEA"
+        android:background="@color/aqua"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -52,7 +52,7 @@
         android:id="@+id/after_search"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/recy"
+        android:background="@color/aqua"
         android:orientation="vertical"
         android:visibility="gone"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -76,7 +76,7 @@
             android:id="@+id/sca"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#D7EBEA"
+            android:background="@color/aqua"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
