--- a/app/src/main/res/layout/activity_login_2.xml
+++ b/app/src/main/res/layout/activity_login_2.xml
@@ -51,7 +51,10 @@
             app:scale_textsize="20"
             app:scale_top="20"
             app:scale_width="350"
-            android:background="@drawable/inputbox_selector"/>
+            android:textColor="@color/black_to_white"
+            android:textColorHint="@color/darker_gray2_to_white"
+            android:background="@drawable/inputbox_selector"
+            android:fontFamily="@font/pretendard_regular"/>
 
         <EditText
             android:id="@+id/password_l"
@@ -65,7 +68,10 @@
             app:scale_textsize="20"
             app:scale_top="90"
             app:scale_width="350"
-            android:background="@drawable/inputbox_selector"/>
+            android:textColor="@color/black_to_white"
+            android:textColorHint="@color/darker_gray2_to_white"
+            android:background="@drawable/inputbox_selector"
+            android:fontFamily="@font/pretendard_regular"/>
 
         <Button
             android:id="@+id/login_b"
@@ -80,7 +86,8 @@
             app:scale_left="50"
             app:scale_textsize="20"
             app:scale_top="160"
-            app:scale_width="300" />
+            app:scale_width="300"
+            android:fontFamily="@font/pretendard_bold"/>
 
     </com.ssomai.android.scalablelayout.ScalableLayout>
 
@@ -109,7 +116,8 @@
             app:scale_left="50"
             app:scale_textsize="15"
             app:scale_top="0"
-            app:scale_width="300" />
+            app:scale_width="300"
+            android:fontFamily="@font/pretendard_regular"/>
     </com.ssomai.android.scalablelayout.ScalableLayout>
 
 
@@ -144,7 +152,8 @@
                 android:textAlignment="center"
                 app:scale_height="50"
                 app:scale_textsize="15"
-                app:scale_width="400"/>
+                app:scale_width="400"
+                android:fontFamily="@font/pretendard_bold"/>
         </com.ssomai.android.scalablelayout.ScalableLayout>
         </FrameLayout>
 
