--- a/app/src/main/res/layout/item_bookmark.xml
+++ b/app/src/main/res/layout/item_bookmark.xml
@@ -29,12 +29,13 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:text="용어샘플"
-            android:textStyle="bold"
+            android:textColor="@color/darker_gray2_to_white"
             app:scale_height="30"
             app:scale_left="10"
             app:scale_textsize="17.5"
             app:scale_top="5"
-            app:scale_width="220" />
+            app:scale_width="220"
+            android:fontFamily="@font/pretendard_bold"/>
 
         <ImageButton
             android:id="@+id/heart"
@@ -71,11 +72,13 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:text="meaning sample goes here with meaning sample goes here"
+            android:textColor="@color/darker_gray2_to_white"
             app:scale_height="40"
             app:scale_left="10"
             app:scale_textsize="15"
             app:scale_top="38"
-            app:scale_width="270"/>
+            app:scale_width="270"
+            android:fontFamily="@font/pretendard_regular"/>
 
         <View
             android:layout_width="match_parent"
@@ -84,7 +87,8 @@
             app:scale_height="1"
             app:scale_left="10"
             app:scale_top="91"
-            app:scale_width="270" />
+            app:scale_width="270"
+            />
 
         <TextView
             android:id="@+id/term_cate"
@@ -97,7 +101,9 @@
             app:scale_left="10"
             app:scale_textsize="12"
             app:scale_top="103"
-            app:scale_width="50"/>
+            app:scale_width="50"
+            android:fontFamily="@font/pretendard_regular"/>
+
 
         <TextView
             android:id="@+id/term_tag1"
@@ -112,7 +118,8 @@
             app:scale_left="65"
             app:scale_textsize="12"
             app:scale_top="103"
-            app:scale_width="165" />
+            app:scale_width="165"
+            android:fontFamily="@font/pretendard_regular"/>
 
         <ImageView
             android:id="@+id/tag_more"
