--- a/app/src/main/res/drawable/darker_gray_background.xml
+++ b/app/src/main/res/drawable/darker_gray_background.xml
@@ -2,15 +2,15 @@
 
 <item
     android:bottom="0dp"
-    android:left="0dp"
-    android:right="0dp"
+    android:left="-2dp"
+    android:right="-2dp"
     android:top="0dp">
     <shape android:shape="rectangle" >
         <stroke
             android:width="1dp"
-            android:color="@color/darker_gray2" />
+            android:color="@color/darker_gray2_to_black" />
 
-        <solid android:color="#FFFFFF" />
+        <solid android:color="@color/mere_white_to_black" />
     </shape>
 </item>
 
