--- a/app/src/main/res/drawable/inputbox_normal.xml
+++ b/app/src/main/res/drawable/inputbox_normal.xml
@@ -9,7 +9,7 @@
     <item
         android:bottom="8px">
         <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF"/>
+            <solid android:color="@color/white_box"/>
         </shape>
     </item>
 
