--- a/app/src/main/res/drawable/white_background_round.xml
+++ b/app/src/main/res/drawable/white_background_round.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="30dp"
     android:shape="rectangle" >
-    <solid android:color="#ffffff" />
+    <solid android:color="@color/white_box" />
     <corners
         android:bottomLeftRadius="15dp"
         android:bottomRightRadius="15dp"
