--- a/app/src/main/res/layout/activity_word_detail.xml
+++ b/app/src/main/res/layout/activity_word_detail.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
@@ -18,23 +19,23 @@
         android:paddingLeft="10dp"
         android:paddingEnd="10dp"
         android:paddingRight="10dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:theme="@style/ToolbarTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:titleTextColor="#000000"
+        app:title="단어"
+        app:titleTextColor="@color/darker_gray3"
         app:titleTextAppearance="@style/Toolbar.TitleText">
-
     </androidx.appcompat.widget.Toolbar>
 
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
-            android:layout_margin="10dp"
+            android:layout_margin="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="#FFFFFF"
+            app:cardBackgroundColor="@color/white_box"
             app:cardCornerRadius="15dp"
             app:cardElevation="2dp"
             app:cardUseCompatPadding="true">
@@ -42,7 +43,7 @@
             <com.ssomai.android.scalablelayout.ScalableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:scale_base_height="80"
+                app:scale_base_height="72"
                 app:scale_base_width="100">
 
                 <TextView
@@ -50,27 +51,53 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="단어"
-                    android:textColor="#000000"
+                    android:textColor="@color/black_to_white"
                     app:scale_height="12"
-                    app:scale_left="4"
-                    app:scale_textsize="7"
+                    app:scale_left="5"
+                    app:scale_textsize="6"
                     app:scale_top="3"
-                    app:scale_width="90"
-                    tools:ignore="MissingPrefix" />
+                    app:scale_width="60"
+                    tools:ignore="MissingPrefix"
+                    android:gravity="center_vertical"
+                    android:fontFamily="@font/pretendard_bold"/>
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:background="@android:color/transparent"
+                    app:srcCompat = "@drawable/heart_empty"
+                    android:scaleType="center"
+                    app:scale_height="12"
+                    app:scale_left="77"
+                    app:scale_top="3"
+                    app:scale_width="8"/>
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:background="@android:color/transparent"
+                    app:srcCompat = "@drawable/bookmark_empty"
+                    android:scaleType="center"
+                    app:scale_height="12"
+                    app:scale_left="87"
+                    app:scale_top="3"
+                    app:scale_width="8"/>
 
                 <TextView
                     android:id="@+id/wm"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
+                    android:fontFamily="@font/pretendard_regular"
                     android:maxLines="2"
                     android:text="설명"
-                    android:textColor="#97000000"
+                    android:textColor="@color/darker_gray2_to_white"
                     app:scale_height="12"
-                    app:scale_left="4"
+                    app:scale_left="5"
                     app:scale_textsize="5"
                     app:scale_top="16"
-                    app:scale_width="86"
+                    app:scale_width="90"
                     app:textview_wrapcontent_direction="bottom"
                     app:textview_wrapcontent_movesiblings="true"
                     app:textview_wrapcontent_resizesurrounded="true"
@@ -80,13 +107,71 @@
                     android:id="@+id/more"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@color/white"
+                    android:background="#00ff0000"
                     android:text="더보기"
-                    app:scale_height="12"
-                    app:scale_left="7"
+                    android:textColor="@color/black_to_white"
+                    app:scale_height="11"
+                    app:scale_left="5"
                     app:scale_textsize="5"
-                    app:scale_top="50"
-                    app:scale_width="86" />
+                    app:scale_top="40"
+                    app:scale_width="90"
+                    android:fontFamily="@font/pretendard_regular"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/darker_gray"
+                    app:scale_height="0.5"
+                    app:scale_left="5"
+                    app:scale_top="54"
+                    app:scale_width="90" />
+
+                <TextView
+                    android:id="@+id/category"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/aqua_darker_background_round_sharp"
+                    android:gravity="center"
+                    android:text="정치"
+                    app:scale_height="10"
+                    app:scale_left="5"
+                    app:scale_textsize="4.5"
+                    app:scale_top="58"
+                    app:scale_width="20"
+                    android:fontFamily="@font/pretendard_regular"/>
+
+                <TextView
+                    android:id="@+id/hashtag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="10dp"
+                    android:background="@drawable/aqua_background_round_sharp"
+                    android:text="#해시태그 #해시태그 #해시"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    app:scale_height="10"
+                    app:scale_left="28"
+                    app:scale_textsize="4.5"
+                    app:scale_top="58"
+                    app:scale_width="49"
+                    android:fontFamily="@font/pretendard_regular"/>
+
+                <ImageView
+                    android:id="@+id/tag_more"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/aqua_background_round_sharp"
+                    android:gravity="center"
+                    android:scaleType="center"
+                    android:src="@drawable/etc_35"
+                    app:scale_height="10"
+                    app:scale_left="80"
+                    app:scale_top="58"
+                    app:scale_width="15" />
+
+
 
             </com.ssomai.android.scalablelayout.ScalableLayout>
         </androidx.cardview.widget.CardView>
@@ -96,12 +181,12 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="20dp"
             android:layout_marginTop="19dp"
-            app:cardBackgroundColor="#FFFFFF"
+            app:cardBackgroundColor="@color/white_box"
             app:cardCornerRadius="15dp"
             app:cardElevation="2dp"
-            app:cardUseCompatPadding="true">>
+            app:cardUseCompatPadding="true">
 
             <com.ssomai.android.scalablelayout.ScalableLayout
                 android:layout_width="match_parent"
@@ -115,13 +200,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="관련기사"
-                    android:textColor="#000000"
+                    android:textColor="@color/black_to_white"
                     app:scale_height="12"
                     app:scale_left="4"
-                    app:scale_textsize="7"
+                    app:scale_textsize="6"
                     app:scale_top="3"
                     app:scale_width="90"
-                    tools:ignore="MissingPrefix" />
+                    tools:ignore="MissingPrefix"
+                    android:fontFamily="@font/pretendard_bold"/>
 
                 <TextView
                     android:id="@+id/news2"
@@ -130,7 +216,7 @@
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:text="내용"
-                    android:textColor="#97000000"
+                    android:textColor="@color/darker_gray2_to_white"
                     app:scale_height="12"
                     app:scale_left="4"
                     app:scale_textsize="5"
@@ -139,7 +225,8 @@
                     app:textview_wrapcontent_direction="bottom"
                     app:textview_wrapcontent_movesiblings="true"
                     app:textview_wrapcontent_resizesurrounded="true"
-                    tools:ignore="MissingPrefix" />
+                    tools:ignore="MissingPrefix"
+                    android:fontFamily="@font/pretendard_regular"/>
 
 
             </com.ssomai.android.scalablelayout.ScalableLayout>
