--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -9,7 +9,6 @@
     <com.ssomai.android.scalablelayout.ScalableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         app:scale_base_height="16"
         app:scale_base_width="100">
         <TextView
@@ -17,15 +16,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="단어"
-            android:textColor="#000000"
-            android:background="@drawable/under"
+            android:textColor="@color/black_to_white"
+
             android:paddingTop="7dp"
             app:scale_height="11"
             app:scale_left="4"
             app:scale_textsize="5.5"
             app:scale_top="3"
             app:scale_width="90"
-            tools:ignore="MissingPrefix" />
+            tools:ignore="MissingPrefix"
+            android:fontFamily="@font/pretendard_regular"/>
 
 
     </com.ssomai.android.scalablelayout.ScalableLayout>
