--- a/app/src/main/res/layout/item_recent.xml
+++ b/app/src/main/res/layout/item_recent.xml
@@ -3,18 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
+    android:layout_height="wrap_content">
 
     <com.ssomai.android.scalablelayout.ScalableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        app:scale_height="16"
+        app:scale_left="5"
+        app:scale_width="100"
         app:scale_base_height="16"
         app:scale_base_width="100">
-
         <ImageView
-            android:id="@+id/recenet_image"
+            android:id="@+id/recent_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:scale_height="11"
@@ -31,13 +31,14 @@
             android:text="단어"
             android:paddingTop="7dp"
             android:paddingStart="13dp"
-            android:textColor="#000000"
+            android:textColor="@color/black_to_white"
             app:scale_height="11"
             app:scale_left="12"
             app:scale_textsize="5.5"
             app:scale_top="3"
             app:scale_width="70"
-            tools:ignore="MissingPrefix" />
+            tools:ignore="MissingPrefix"
+            android:fontFamily="@font/pretendard_regular"/>
 
         <ImageButton
             android:id="@+id/recent_delete"
@@ -50,8 +51,6 @@
             app:scale_width="7"
             tools:ignore="MissingPrefix"
             android:background="@drawable/cross_icon" />
-
-
     </com.ssomai.android.scalablelayout.ScalableLayout>
 
 </LinearLayout>
